--- a/app/src/main/res/drawable/ic_rbtn_2_checked.xml
+++ b/app/src/main/res/drawable/ic_rbtn_2_checked.xml
@@ -5,9 +5,9 @@
     android:viewportHeight="20">
   <path
       android:pathData="M10,17.083C13.912,17.083 17.083,13.912 17.083,10C17.083,6.088 13.912,2.917 10,2.917C6.088,2.917 2.917,6.088 2.917,10C2.917,13.912 6.088,17.083 10,17.083ZM10,18.333C14.602,18.333 18.333,14.602 18.333,10C18.333,5.398 14.602,1.667 10,1.667C5.398,1.667 1.667,5.398 1.667,10C1.667,14.602 5.398,18.333 10,18.333Z"
-      android:fillColor="@color/primaryContainer"
+      android:fillColor="@color/black"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M10,10m-5,0a5,5 0,1 1,10 0a5,5 0,1 1,-10 0"
-      android:fillColor="@color/primaryContainer"/>
+      android:fillColor="@color/black"/>
 </vector>
