--- a/app/src/main/res/layout/item_language.xml
+++ b/app/src/main/res/layout/item_language.xml
@@ -1,42 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layoutRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
-    android:background="@drawable/bg_item_language"
-    android:gravity="center_vertical"
-    android:backgroundTint="@color/white"
-    android:paddingHorizontal="16dp"
-    android:paddingVertical="@dimen/dp12">
+    android:backgroundTint="@color/secondary"
+    android:gravity="center_vertical">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivLanguage"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:src="@drawable/ic_english" />
-
-    <TextView
-        android:id="@+id/language_name"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginStart="12dp"
-        android:gravity="start|center_vertical"
-        android:singleLine="true"
-        android:text="@string/english"
-        android:textSize="14sp"
-        android:fontFamily="@font/nunito_semibold"
-        android:textColor="@color/black" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_weight="1" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivRadio"
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_rbtn_2" />
+        app:cardCornerRadius="100dp"
+        app:cardElevation="0dp">
+
+        <FrameLayout
+            android:id="@+id/frFlagCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/secondary"
+            android:padding="@dimen/dp4">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivLanguage"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_english" />
+        </FrameLayout>
+    </androidx.cardview.widget.CardView>
+
+    <View
+        android:id="@+id/viewSpace"
+        android:layout_width="8dp"
+        android:layout_height="12dp"
+        android:background="@color/secondary" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="0dp">
+
+        <LinearLayout
+            android:id="@+id/layoutLanguage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/secondary"
+            android:paddingHorizontal="@dimen/dp12"
+            android:paddingVertical="@dimen/dp12">
+
+            <TextView
+                android:id="@+id/language_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="12dp"
+                android:gravity="start|center_vertical"
+                android:singleLine="true"
+                android:text="@string/english"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivRadio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_rbtn_2" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
