--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.BaseAndroidViewDKTECH" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="android:forceDarkAllowed" tools:targetApi="29">false</item>
+        <item name="android:statusBarColor">@color/white</item>
     </style>
 
     <style name="Theme.BaseAndroidViewDKTECH" parent="Base.Theme.BaseAndroidViewDKTECH" />
@@ -14,17 +15,18 @@
         <item name="android:includeFontPadding">false</item>
     </style>
     <style name="mHeading.P0" parent="mHeading">
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/brice_semibold</item>
         <item name="android:textSize">@dimen/sp20</item>
     </style>
     <style name="mHeading.P1" parent="mHeading">
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/brice_semibold</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="mHeading.P2" parent="mHeading">
-        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:fontFamily">@font/brice_semibold</item>
         <item name="android:textSize">14sp</item>
     </style>
+
 
 
     <style name="mNormalText">
@@ -32,15 +34,11 @@
     </style>
     <style name="mNormalText.Heading1" parent="mNormalText">
         <item name="android:textSize">16sp</item>
-        <item name="android:fontFamily">@font/nunito_medium</item>
+        <item name="android:fontFamily">@font/inter</item>
     </style>
     <style name="mNormalText.Heading2" parent="mNormalText">
         <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">@font/nunito_medium</item>
+        <item name="android:fontFamily">@font/inter</item>
     </style>
 
-    <style name="mNormalText.Heading3" parent="mNormalText">
-        <item name="android:textSize">12sp</item>
-        <item name="android:fontFamily">@font/nunito_medium</item>
-    </style>
 </resources>
