--- a/app/src/main/res/layout/nav_item_template.xml
+++ b/app/src/main/res/layout/nav_item_template.xml
@@ -29,6 +29,8 @@
         android:text="@string/template"
         android:textColor="@color/onSecondaryContainer"
         android:textSize="16sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:visibility="gone"
         android:layout_marginStart="8dp"/>
 </LinearLayout>
