--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,11 @@
     <color name="secondaryContainer">#F1DFA6</color>
     <color name="onSecondaryContainer">#6F6234</color>
 
+    <color name="tertiaryContainer">#8C2AFF</color>
+    <color name="onTertiaryContainer">#1E1B13</color>
+
+    <color name="tertiary">#D4AFFF</color>
+    <color name="onTertiary">#1E1B13</color>
 
     <!-- Error colors -->
     <color name="error">#FFB00020</color>
