Feat: HOME UI fragment_home.xml

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Base.Theme.BaseAndroidViewDKTECH" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="android:forceDarkAllowed" tools:targetApi="29">false</item>
-        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:statusBarColor">@color/primary</item>
     </style>
 
     <style name="Theme.BaseAndroidViewDKTECH" parent="Base.Theme.BaseAndroidViewDKTECH" />
