--- a/app/src/main/res/drawable/bg_item_tab_selected_howuse.xml
+++ b/app/src/main/res/drawable/bg_item_tab_selected_howuse.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/white" />
-    <corners android:radius="24dp" />
+    <solid android:color="@color/primaryContainer" />
+    <corners android:radius="16dp" />
 
 </shape>
