feat: data source

--- a/app/src/main/res/layout/item_template.xml
+++ b/app/src/main/res/layout/item_template.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <ImageView
+        android:id="@+id/image"
         android:layout_width="108dp"
         android:layout_height="108dp"
         android:src="@drawable/phone_background_white"
