--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -174,7 +174,7 @@
                 style="@style/mHeading.P0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Pick a Template"
+                android:text="@string/pick_a_template"
                 android:textAlignment="center"
                 android:textColor="@color/onPrimary"
                 android:textSize="16sp"
@@ -194,73 +194,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/template_title">
 
                 <LinearLayout
+                    android:id="@+id/ctn_categories"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp">
-                    <TextView
-                        android:id="@+id/tab_cute"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:layout_marginEnd="12dp"
-                        android:background="@drawable/bg_item_tab"
-                        android:gravity="center"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
-                        android:text="@string/cute"
-                        android:textColor="@color/onPrimary"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/tab_animal"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:background="@drawable/bg_item_tab"
-                        android:gravity="center"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
-                        android:layout_marginEnd="12dp"
-                        android:text="@string/animal"
-                        android:textColor="@color/onPrimary"
-                        android:textSize="14sp" />
-                    <TextView
-                        android:id="@+id/tab_all"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:layout_marginEnd="12dp"
-                        android:background="@drawable/bg_item_tab_selected"
-                        android:gravity="center"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
-                        android:text="@string/all_template"
-                        android:textColor="@color/onPrimary"
-                        android:textSize="14sp" />
-                    <TextView
-                        android:id="@+id/tab_trending"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:layout_marginEnd="12dp"
-                        android:background="@drawable/bg_item_tab"
-                        android:gravity="center"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
-                        android:text="@string/trending"
-                        android:textColor="@color/onPrimary"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/tab_cartoon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:background="@drawable/bg_item_tab"
-                        android:gravity="center"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
-                        android:text="@string/cartoon"
-                        android:textColor="@color/onPrimary"
-                        android:textSize="14sp" />
-
                 </LinearLayout>
 
             </HorizontalScrollView>
@@ -268,7 +207,7 @@
             <LinearLayout
                 android:id="@+id/ctn_templates"
                 android:layout_width="match_parent"
-                android:layout_height="420dp"
+                android:layout_height="450dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginHorizontal="@dimen/dp16"
                 android:orientation="vertical"
@@ -284,10 +223,7 @@
                     android:paddingHorizontal="8dp"
                     android:paddingVertical="@dimen/dp32"
                     android:nestedScrollingEnabled="false"
-                    tools:itemCount="9"
-                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    tools:listitem="@layout/item_template"
-                    tools:spanCount="3" />
+                    tools:listitem="@layout/item_template" />
 
                 <TextView
                     android:id="@+id/see_more"
@@ -336,6 +272,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcv_lessons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -345,6 +282,14 @@
                     app:layout_constraintTop_toBottomOf="@id/see_all_lessons" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lesson_section"
+                />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
