--- a/app/src/main/res/layout/fragment_lesson.xml
+++ b/app/src/main/res/layout/fragment_lesson.xml
@@ -31,6 +31,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/app_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/app_title" />
+
     <HorizontalScrollView
         android:id="@+id/category_scroll"
         android:layout_width="0dp"
@@ -42,50 +43,12 @@
         app:layout_constraintTop_toBottomOf="@+id/app_title">
 
         <LinearLayout
+            android:id="@+id/ctn_lessons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingStart="16dp"
-            android:paddingEnd="16dp">
-            <TextView
-                android:id="@+id/tab_cute"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginEnd="12dp"
-                android:background="@drawable/bg_item_tab"
-                android:gravity="center"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="@string/lesson1"
-                android:textColor="@color/onPrimary"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/tab_animal"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:background="@drawable/bg_item_tab"
-                android:gravity="center"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:layout_marginEnd="12dp"
-                android:text="@string/lesson2"
-                android:textColor="@color/onPrimary"
-                android:textSize="14sp" />
-            <TextView
-                android:id="@+id/tab_all"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginEnd="12dp"
-                android:background="@drawable/bg_item_tab"
-                android:gravity="center"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="@string/lesson3"
-                android:textColor="@color/onPrimary"
-                android:textSize="14sp" />
-
-        </LinearLayout>
+            android:paddingEnd="16dp"></LinearLayout>
 
     </HorizontalScrollView>
 
@@ -93,13 +56,18 @@
         android:id="@+id/lesson_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         android:layout_marginHorizontal="@dimen/dp16"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/category_scroll"
-        tools:listitem="@layout/fragment_lesson_item"
-        />
+        tools:listitem="@layout/fragment_lesson_item" />
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lesson_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
