--- a/app/src/main/res/layout/item_template.xml
+++ b/app/src/main/res/layout/item_template.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    android:layout_marginHorizontal="@dimen/dp2"
+    android:layout_marginVertical="@dimen/dp2"
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/image"
